  functions added (joy)
- bios/kprint.c, kprintasm.S - ARAnyM code removed, NF support added (joy)
- bios/machine.[ch], bios.c - updated for new NF library (joy)
- Makefile, doc/install.txt, include/config.h - updated to support NF (joy)

07. Feb. 2003
- doc/announce.txt - updated for release 0.6 (MAD)

8. Feb. 2003
- bios/natfeats.c - display the short emu name so that initinfo fits in
  40 columns screen resolution (joy)
- aes/geminit.c - check the Control key only once, not before loading each
  accessory. The harddrives are so fast that it doesn't make sense to try
  and skip only some accessories ;-) (joy)
- bios/initinfo.c - corrected displaying of free RAM so it fits in 40 cols.
  Also added a TOS like boot timeout with a little boot guide and a gfx
  effect of countdown :-) (joy)
- include/config.h - #define TIMEOUT_ON_BOOT here or in your localconf.h.
  This was added especially to make Thothy happy - he doesn't like long
  boot timeouts... (joy)
- po/cs.po - Czech translation updated (joy)
- bios/initinfo.c - moved up the time bar a few lines (MAD)
- vdi/esclisa.S - used this instead of buggy vdiesc.c  (MAD)
- bdos/console.c - better code style (MAD)
- vdi/vdiesc.c - used this again  (MAD)
- po/de.po - updated (MAD)

9. Feb. 2003
- doc/annouce.txt - minor english language rewording (LVL)
- po/fr.po - updated (LVL)
- include/version.h - set to 0.6 (LVL)
- include/config.h - added DETECT_NATIVE_FEATURES (I assume it was only in
  joy's localconf.h) and set it to 1 by default. I checked that it works on
  on both non-nf-enabled-yet STonX and on newly-nf-enabled STonC. I suggest
  to get rid of the STonX native print stuff as soon as I commit to STonX the
  quick natfeat implementation I just added to STonC (LVL)
- natfeat_init() called in memory.S, for earlier availability of kprintf (LVL)
- bios/bios.c - DBGAUTOBOOT added so that the AUTO crash is visible (joy)
- bios/ikbd.c - corrected debug typo (joy)