@@ -45,6 +45,8 @@ extern void swp68l(long *);
 extern long trap1(int, ...);
 extern long trap13(int, ...);
 extern long trap14(int, ...);
+extern long trap1_pexec(short mode, char* p1, void* p2, char* p3);
+
 
 /*
  * WORD set_sr(WORD new); 
